// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dialog examples > Default dialog should render correctly 1`] = `
<div>
  <button
    class="v-button"
  >
    Open default dialog
  </button>
  <dialog
    aria-describedby="dialog-description"
    aria-labelledby="dialog-title"
    class="v-message v-dialog v-dialog-default"
    id="dialog"
  >
    <div
      class="v-message-content v-pb-2 v-pr-2"
    >
      <h2
        class="v-dialog-header v-align-items-center v-flex v-gap-6 v-justify-content-start"
        id="dialog-title"
      >
        Default title
      </h2>
      <p
        id="dialog-description"
      >
        This is required text that describes the dialog title in more detail.
      </p>
      <div
        class="v-align-items-center v-flex v-flex-wrap v-gap-8 v-pt-16"
      >
        <button
          class="v-button"
        >
          Primary action
        </button>
        <button
          class="v-button v-button-secondary"
        >
          Secondary action
        </button>
      </div>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-20 -v-ml-12 -v-mr-18"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </dialog>
</div>
`;

exports[`Dialog examples > Dialog without close icon button should render correctly 1`] = `
<div>
  <button
    class="v-button"
  >
    Open dialog without close icon
  </button>
  <dialog
    aria-describedby="no-close-dialog-description"
    aria-labelledby="no-close-dialog-title"
    class="v-message v-message-error v-dialog"
    id="no-close-dialog"
  >
    <div
      class="v-message-content v-pb-2 v-pr-2"
    >
      <h2
        class="v-dialog-header v-align-items-center v-flex v-gap-6 v-justify-content-start"
        id="no-close-dialog-title"
      >
        <svg
          aria-hidden="false"
          aria-label="Error"
          class="v-icon v-icon-visa v-icon-low v-icon-error v-message-icon"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-secondary"
            d="M12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
          />
          <path
            class="v-icon-primary"
            d="M12 16C12.5523 16 13 16.4477 13 17C13 17.5523 12.5523 18 12 18C11.4477 18 11 17.5523 11 17C11 16.4477 11.4477 16 12 16ZM13 14H11V6H13V14Z"
          />
          <defs>
            <clippath>
              <rect
                height="24"
                width="24"
              />
            </clippath>
          </defs>
        </svg>
        Error title
      </h2>
      <p
        id="no-close-dialog-description"
      >
        This is required text that describes the dialog title in more detail.
      </p>
      <div
        class="v-align-items-center v-flex v-flex-wrap v-gap-8 v-justify-content-end v-pt-16"
      >
        <button
          class="v-button"
        >
          Close
        </button>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Dialog examples > Error dialog should render correctly 1`] = `
<div>
  <button
    class="v-button"
  >
    Open error dialog
  </button>
  <dialog
    aria-describedby="error-dialog-description"
    aria-labelledby="error-dialog-title"
    class="v-message v-message-error v-dialog"
    id="error-dialog"
  >
    <div
      class="v-message-content v-pb-2 v-pr-2"
    >
      <h2
        class="v-dialog-header v-align-items-center v-flex v-gap-6 v-justify-content-start"
        id="error-dialog-title"
      >
        <svg
          aria-hidden="false"
          aria-label="Error"
          class="v-icon v-icon-visa v-icon-low v-icon-error v-message-icon"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-secondary"
            d="M12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
          />
          <path
            class="v-icon-primary"
            d="M12 16C12.5523 16 13 16.4477 13 17C13 17.5523 12.5523 18 12 18C11.4477 18 11 17.5523 11 17C11 16.4477 11.4477 16 12 16ZM13 14H11V6H13V14Z"
          />
          <defs>
            <clippath>
              <rect
                height="24"
                width="24"
              />
            </clippath>
          </defs>
        </svg>
        Error title
      </h2>
      <p
        id="error-dialog-description"
      >
        This is required text that describes the dialog title in more detail.
      </p>
      <div
        class="v-align-items-center v-flex v-flex-wrap v-gap-8 v-pt-16"
      >
        <button
          class="v-button"
        >
          Primary action
        </button>
      </div>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-20 -v-ml-12 -v-mr-18"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </dialog>
</div>
`;

exports[`Dialog examples > Reusable dialog should render correctly 1`] = `
<div>
  <div>
    <button
      class="v-button"
    >
      Open reusable dialog
    </button>
    <dialog
      aria-describedby="test-id-0-description"
      aria-labelledby="test-id-0-title"
      class="v-message v-dialog"
      id="test-id-0"
    >
      <div
        class="v-message-content v-pb-2 v-pr-2"
      >
        <h2
          class="v-dialog-header v-align-items-center v-flex v-gap-6 v-justify-content-start"
          id="test-id-0-title"
        >
          <svg
            aria-hidden="false"
            aria-label="Information"
            class="v-icon v-icon-visa v-icon-low v-icon-information v-message-icon"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-secondary"
              d="M12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
            />
            <path
              class="v-icon-primary"
              d="M13.4121 17.0352H15V19H9V17.0352H11.4512V12.9873H9.43164V11.0225H13.4121V17.0352ZM12 5C13.2549 5 14.2646 6.02181 14.2646 7.26953C14.2646 8.51722 13.2549 9.53906 12 9.53906C10.7549 9.53906 9.73538 8.51722 9.73535 7.26953C9.73535 6.02181 10.7549 5 12 5ZM12 6.96484C11.8333 6.96484 11.6963 7.10251 11.6963 7.26953C11.6963 7.43652 11.8334 7.57422 12 7.57422C12.1666 7.57422 12.3037 7.43652 12.3037 7.26953C12.3037 7.10251 12.1667 6.96484 12 6.96484Z"
            />
            <defs>
              <clippath>
                <rect
                  height="24"
                  width="24"
                />
              </clippath>
            </defs>
          </svg>
          Nova title
        </h2>
        <p
          id="test-id-0-description"
        >
          This is required text that describes the dialog title in more detail.
        </p>
        <div
          class="v-align-items-center v-flex v-flex-wrap v-gap-8 v-pt-16"
        >
          <button
            class="v-button"
          >
            Primary action
          </button>
          <button
            class="v-button v-button-secondary"
          >
            Secondary action
          </button>
        </div>
      </div>
      <button
        aria-label="Close"
        class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-20 -v-ml-12 -v-mr-18"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-close"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                transform="translate(0 0.000488281)"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
    </dialog>
    <div
      style="margin-top: 24px;"
    >
      <details
        class="v-accordion"
        id="test-id-1"
      >
        <summary
          class="v-button v-button-large v-button-secondary v-accordion-heading v-gap-2 v-typography-body-2-medium"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          <div
            class="v-align-items-center v-flex v-gap-6"
          >
            Customize demo
          </div>
        </summary>
        <div
          class="v-accordion-panel v-px-32"
        >
          <form>
            <div
              class="v-flex v-flex-col v-gap-16"
              style="margin-bottom: 32px;"
            >
              <div
                class="v-flex v-flex-col v-gap-4"
              >
                <label
                  class="v-label"
                  for="test-id-2-input"
                >
                  Description
                   
                </label>
                <div
                  class="v-flex v-flex-col v-flex-grow v-gap-4"
                >
                  <div
                    class="v-surface v-input-container"
                  >
                    <input
                      aria-invalid="false"
                      class="v-input"
                      id="test-id-2-input"
                      type="text"
                      value="This is required text that describes the dialog title in more detail."
                    />
                  </div>
                </div>
              </div>
              <div
                class="v-flex v-flex-col v-gap-4"
              >
                <label
                  class="v-label"
                  for="test-id-3-input"
                >
                  Primary button label
                   
                </label>
                <div
                  class="v-flex v-flex-col v-flex-grow v-gap-4"
                >
                  <div
                    class="v-surface v-input-container"
                  >
                    <input
                      aria-invalid="false"
                      class="v-input"
                      id="test-id-3-input"
                      type="text"
                      value="Primary action"
                    />
                  </div>
                </div>
              </div>
              <div
                class="v-flex v-flex-col v-gap-4"
              >
                <label
                  class="v-label"
                  for="test-id-4-input"
                >
                  Secondary button label
                   
                </label>
                <div
                  class="v-flex v-flex-col v-flex-grow v-gap-4"
                >
                  <div
                    class="v-surface v-input-container"
                  >
                    <input
                      aria-invalid="false"
                      class="v-input"
                      id="test-id-4-input"
                      type="text"
                      value="Secondary action"
                    />
                  </div>
                </div>
              </div>
              <div
                class="v-flex v-flex-col v-gap-4"
              >
                <label
                  class="v-label"
                  for="test-id-5-input"
                >
                  Title
                   
                </label>
                <div
                  class="v-flex v-flex-col v-flex-grow v-gap-4"
                >
                  <div
                    class="v-surface v-input-container"
                  >
                    <input
                      aria-invalid="false"
                      class="v-input"
                      id="test-id-5-input"
                      type="text"
                      value="Nova title"
                    />
                  </div>
                </div>
              </div>
              <div
                class="v-flex v-flex-col v-flex-wrap v-gap-4"
              >
                <label
                  class="v-label"
                  for="test-id-6-select"
                  id="test-id-6-label"
                >
                  Message type
                   
                </label>
                <div
                  class="v-flex v-flex-col v-flex-grow v-gap-4"
                >
                  <div
                    class="v-surface v-input-container"
                  >
                    <select
                      aria-describedby="test-id-6-message"
                      aria-invalid="false"
                      class="v-input"
                      id="test-id-6-select"
                    >
                      <option
                        hidden=""
                      />
                      <option
                        value="information"
                      >
                        Information
                      </option>
                      <option
                        value="success"
                      >
                        Success
                      </option>
                      <option
                        value="warning"
                      >
                        Warning
                      </option>
                      <option
                        value="error"
                      >
                        Error
                      </option>
                      <option
                        value="subtle"
                      >
                        Subtle
                      </option>
                    </select>
                    <svg
                      aria-hidden="true"
                      class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="v-icon-primary"
                        d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
                      />
                    </svg>
                  </div>
                  <span
                    class="v-input-message"
                    id="test-id-6-message"
                  />
                </div>
              </div>
              <div
                class="v-flex"
              >
                <input
                  aria-invalid="false"
                  checked=""
                  class="v-checkbox"
                  id="test-id-7-input"
                  type="checkbox"
                />
                <div
                  class="v-flex v-flex-col v-gap-2 v-my-10"
                >
                  <label
                    class="v-label"
                    for="test-id-7-input"
                  >
                    Dismissible
                  </label>
                </div>
              </div>
              <span
                class="v-input-message v-mt-4"
                id="test-id-7-message"
              />
              <div
                class="v-flex"
              >
                <input
                  aria-invalid="false"
                  checked=""
                  class="v-checkbox"
                  id="test-id-8-input"
                  type="checkbox"
                />
                <div
                  class="v-flex v-flex-col v-gap-2 v-my-10"
                >
                  <label
                    class="v-label"
                    for="test-id-8-input"
                  >
                    Show icon
                  </label>
                </div>
              </div>
              <span
                class="v-input-message v-mt-4"
                id="test-id-8-message"
              />
            </div>
            <div
              class="v-flex v-gap-16"
              style="margin-bottom: 16px;"
            >
              <button
                class="v-button"
                type="submit"
              >
                Apply
              </button>
              <button
                class="v-button v-button-secondary"
                type="button"
              >
                Reset
              </button>
            </div>
          </form>
        </div>
      </details>
    </div>
  </div>
</div>
`;

exports[`Dialog examples > Success dialog should render correctly 1`] = `
<div>
  <button
    class="v-button"
  >
    Open success dialog
  </button>
  <dialog
    aria-describedby="success-dialog-description"
    aria-labelledby="success-dialog-title"
    class="v-message v-message-success v-dialog"
    id="success-dialog"
  >
    <div
      class="v-message-content v-pb-2 v-pr-2"
    >
      <h2
        class="v-dialog-header v-align-items-center v-flex v-gap-6 v-justify-content-start"
        id="success-dialog-title"
      >
        <svg
          aria-hidden="false"
          aria-label="Success"
          class="v-icon v-icon-visa v-icon-low v-icon-success v-message-icon"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-secondary"
            d="M18 9.39551L10.5723 17L7 13.3418L8.3623 11.9473L10.5723 14.209L16.6377 8L18 9.39551Z"
          />
          <path
            class="v-icon-primary"
            d="M12 0C18.6168 0 24 5.38317 24 12C24 18.6168 18.6168 24 12 24C5.38317 24 0 18.6168 0 12C0 5.38317 5.38317 0 12 0ZM12 2.18164C6.58647 2.18164 2.18164 6.58647 2.18164 12C2.18164 17.4141 6.58647 21.8184 12 21.8184C17.4141 21.8184 21.8184 17.4141 21.8184 12C21.8184 6.58647 17.4141 2.18164 12 2.18164Z"
          />
          <defs>
            <clippath>
              <rect
                height="24"
                width="24"
              />
            </clippath>
          </defs>
        </svg>
        Success title
      </h2>
      <p
        id="success-dialog-description"
      >
        This is required text that describes the dialog title in more detail.
      </p>
      <div
        class="v-align-items-center v-flex v-flex-wrap v-gap-8 v-pt-16"
      >
        <button
          class="v-button"
        >
          Primary action
        </button>
      </div>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-20 -v-ml-12 -v-mr-18"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </dialog>
</div>
`;

exports[`Dialog examples > Touring tips dialog should render correctly 1`] = `
<div>
  <button
    class="v-button"
  >
    Open touring tips dialog
  </button>
  <dialog
    aria-describedby="touring-tips-dialog-description"
    aria-labelledby="touring-tips-dialog-title"
    class="v-message v-dialog v-dialog-default"
    id="touring-tips-dialog"
  >
    <div
      class="v-message-content v-pb-2 v-pr-2"
    >
      <h2
        class="v-dialog-header v-align-items-center v-flex v-gap-6 v-justify-content-start"
        id="touring-tips-dialog-title"
      >
        Touring tips title
      </h2>
      <div
        class="v-align-items-center v-flex v-flex-row v-gap-8 v-pb-8"
      >
        <svg
          fill="none"
          height="36"
          viewBox="0 0 36 36"
          width="36"
        >
          <rect
            fill="#B3D7FF"
            fill-opacity="0.35"
            height="36"
            rx="18"
            width="36"
          />
          <path
            d="M17.238 13.856C16.8327 13.856 16.3953 13.936 15.926 14.096C15.4567 14.256 15.03 14.496 14.646 14.816H14.502L14.614 13.136C15.0087 12.88 15.478 12.6827 16.022 12.544C16.566 12.4053 17.0727 12.336 17.542 12.336C18.7473 12.336 19.6913 12.5867 20.374 13.088C21.0673 13.5787 21.414 14.4427 21.414 15.68C21.414 16.256 21.3233 16.784 21.142 17.264C20.9713 17.7333 20.742 18.16 20.454 18.544C20.1767 18.928 19.8833 19.28 19.574 19.6C19.382 19.8133 19.126 20.0747 18.806 20.384C18.486 20.6827 18.1287 21.008 17.734 21.36C17.3393 21.712 16.9393 22.0533 16.534 22.384H21.67L21.526 24H14.406V22.576C15.0247 22.0213 15.5527 21.5467 15.99 21.152C16.438 20.7573 16.8327 20.3947 17.174 20.064C17.5153 19.7333 17.83 19.4027 18.118 19.072C18.502 18.6347 18.8167 18.1493 19.062 17.616C19.318 17.072 19.446 16.5013 19.446 15.904C19.446 15.1467 19.2593 14.6187 18.886 14.32C18.5127 14.0107 17.9633 13.856 17.238 13.856Z"
            fill="black"
          />
        </svg>
        <p
          class="v-typography-body-2-bold"
        >
          Touring tips instructions
        </p>
      </div>
      <p
        id="touring-tips-dialog-description"
      >
        This is required text that describes the dialog title in more detail.
      </p>
      <div
        class="v-align-items-center v-flex v-flex-wrap v-gap-8 v-justify-content-between v-pt-16"
      >
        <p>
          2 of 4
        </p>
        <div
          class="v-flex v-flex-wrap v-gap-8 v-justify-content-between"
        >
          <button
            class="v-button v-button-secondary"
          >
            Previous
          </button>
          <button
            class="v-button"
          >
            Next
          </button>
        </div>
      </div>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-20 -v-ml-12 -v-mr-18"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </dialog>
</div>
`;

exports[`Dialog examples > Warning dialog should render correctly 1`] = `
<div>
  <button
    class="v-button"
  >
    Open warning dialog
  </button>
  <dialog
    aria-describedby="warning-dialog-description"
    aria-labelledby="warning-dialog-title"
    class="v-message v-message-warning v-dialog"
    id="warning-dialog"
  >
    <div
      class="v-message-content v-pb-2 v-pr-2"
    >
      <h2
        class="v-dialog-header v-align-items-center v-flex v-gap-6 v-justify-content-start"
        id="warning-dialog-title"
      >
        <svg
          aria-hidden="false"
          aria-label="Warning"
          class="v-icon v-icon-visa v-icon-low v-icon-warning v-message-icon"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-secondary"
            d="M24 20.6602V23H0V20.6396L11.4102 0H13.7197L24 20.6602ZM2.08008 21H21.9297L12.5303 2.09961L2.08008 21Z"
          />
          <path
            class="v-icon-primary"
            d="M13.5 17.002V19.002H11.5V17.002H13.5ZM13.5 8.00195V15.002H11.5V8.00195H13.5Z"
          />
        </svg>
        Warning title
      </h2>
      <p
        id="warning-dialog-description"
      >
        This is required text that describes the dialog title in more detail.
      </p>
      <div
        class="v-align-items-center v-flex v-flex-wrap v-gap-8 v-pt-16"
      >
        <button
          class="v-button"
        >
          Primary action
        </button>
      </div>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-20 -v-ml-12 -v-mr-18"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </dialog>
</div>
`;
